[package]
name = "p2p2"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["tcp", "udp"]
tcp = ["tokio/net"]
udp = ["tokio/net"]

[dependencies]
futures = {version="0.3.17", features=[]}
tokio = {version="1.11.0", optional=true}
serde = {version="1.0.130", features=["derive"]}
thiserror = "1.0.29"
bincode = "1.3.3"
sodiumoxide = "0.2.7"
rand = "0.8.4"

[dev-dependencies]
tokio = {version="1.11.0", features=["macros", "rt"]}
